# FormCoachAI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: Calculations.py  ImageHandler.py  MovementDrawings.py  MovementPatterns.py  main.py
tests/: test_calculations.py  test_imagehandler.py  test_movemendrawings.py  tests_movementpatterns.py
