[tool.poetry]
name = "squat-assistant"
version = "1.0.0"
description = "AI-assisted squat analysis using Mediapipe"
authors = ["M. Zemelka <marc.zemelka@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python-headless = "^4.5"
numpy = "^1.21"
mediapipe = "^0.8"

[tool.poetry.dev-dependencies]
pylint = "^2.9.3"
black = "^21.10b0"
isort = "^5.10.1"
pytest = "^6.2"